--- a/src/components/OpeningHours/OpeningHours.css
+++ b/src/components/OpeningHours/OpeningHours.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=OpeningHours.css.map */
+.OpeningHours {
+  position: relative;
+}
+/*# sourceMappingURL=OpeningHours.css.map */
