--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Lato&family=Tangerine:wght@700&display=swap");
+@import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
+.title-text {
+  font-family: 'Cinzel', serif;
+  margin: 0;
+}
+
+.body-text {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+}
+
+.cursive-text {
+  font-family: 'Tangerine', cursive;
+  font-size: 2.5rem;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.App > *:not(.background-logo) {
+  z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .background-logo {
+  z-index: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: auto;
+  width: 100%;
+  max-width: 1200px;
+  -webkit-transform: translate(-20%, 36%);
+          transform: translate(-20%, 36%);
+  opacity: 0.2;
 }
+/*# sourceMappingURL=App.css.map */
