--- a/src/components/Highlight/Highlight.css
+++ b/src/components/Highlight/Highlight.css
@@ -1,1 +1,16 @@
-/* No CSS *//*# sourceMappingURL=Highlight.css.map */
+.Highlight {
+  padding: 5px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#c8c8c8), color-stop(70%, #c8c8c8), to(rgba(100, 100, 100, 0.4)));
+  background: linear-gradient(#c8c8c8 0%, #c8c8c8 70%, rgba(100, 100, 100, 0.4));
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2 !important;
+}
+
+.Highlight p {
+  margin: 0;
+  text-align: center;
+}
+/*# sourceMappingURL=Highlight.css.map */
