--- a/src/pages/ContactsPage/ContactsPage.scss
+++ b/src/pages/ContactsPage/ContactsPage.scss
@@ -1,5 +1,5 @@
-.OpeningHours{
-    position: relative;   
+.ContactsPage{
+    text-align: right;
     ul{
         list-style: none;
         padding: 0;
