--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Lato&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Lato&family=Tangerine:wght@700&display=swap');
 
 .title-text{
     font-family: 'Cinzel', serif;
@@ -19,10 +19,32 @@
 // fontawesome
 @import url('https://use.fontawesome.com/releases/v5.8.1/css/all.css');
 
+// scrollbar
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 // stylings
 body{
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 *{
   box-sizing: border-box;
@@ -30,21 +52,45 @@ body{
 .App{    
   min-height: 100vh;
   position: relative;
-  //overflow: hidden;
+  display: flex;
+  overflow: hidden;
 
   &>*:not(.background-logo){
-      z-index: 1;
+      z-index: 2;
   }
 
   .background-logo{
-      z-index: 0;
+      z-index: 1;
       position: fixed;
       bottom: 0;
       left: 0;
       height: auto;
-      width: 100%;
-      max-width: 1200px;
+      width: 60%;
+      max-width: 600px;
       transform: translate(-20%, 36%);
-      opacity: 0.2;
+      filter:invert(0.9);
+  }
+  .background-image-container{
+    flex: 1;
+    z-index: 0;
+    background-size: cover;
+    position: relative;
+    .shader{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0,0,0,0.5);
+    }
+  }
+}
+
+@media(max-width:850px){
+  .App{
+    flex-direction: column;
+    .background-logo{
+      bottom: 60%;
+    }
   }
 }
