--- a/src/components/Highlight/Highlight.css
+++ b/src/components/Highlight/Highlight.css
@@ -1,12 +1,14 @@
 .Highlight {
   padding: 5px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#c8c8c8), color-stop(70%, #c8c8c8), to(rgba(100, 100, 100, 0.4)));
-  background: linear-gradient(#c8c8c8 0%, #c8c8c8 70%, rgba(100, 100, 100, 0.4));
+  background: #fff;
+  color: #000;
+  -webkit-box-shadow: 0 1px 2px #000;
+          box-shadow: 0 1px 2px #000;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 2 !important;
+  z-index: 3 !important;
 }
 
 .Highlight p {
