--- a/src/components/OpeningHours/OpeningHours.css
+++ b/src/components/OpeningHours/OpeningHours.css
@@ -1,4 +1,9 @@
 .OpeningHours {
   position: relative;
 }
+
+.OpeningHours ul {
+  list-style: none;
+  padding: 0;
+}
 /*# sourceMappingURL=OpeningHours.css.map */
