--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,6 +1,6 @@
 .Content {
   margin-left: auto;
-  width: clamp(320px, 40%, 500px);
+  width: clamp(500px, 40%, 800px);
   height: 100vh;
   background-color: #fff;
   display: -webkit-box;
@@ -10,6 +10,30 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
+}
+
+.Content div[class^="fade-"] {
+  height: 20px;
+  right: 4px;
+  z-index: 1;
+  width: clamp(500px, 40%, 800px);
+  -webkit-clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
+          clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
+}
+
+.Content .fade-out {
+  position: absolute;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(transparent));
+  background: linear-gradient(#FFF, transparent);
+  top: 0;
+}
+
+.Content .fade-in {
+  position: fixed;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(#FFF));
+  background: linear-gradient(transparent, #FFF);
+  bottom: 0;
 }
 
 .Content .content-container {
@@ -29,19 +53,37 @@
   padding-top: clamp(15px, 10%, 30px);
   padding-left: clamp(15px, 10%, 30px);
   padding-right: clamp(15px, 10%, 30px);
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+
+.Content .content-container.fade {
+  opacity: 0;
 }
 
 @media (max-width: 850px) {
   .Content {
     width: 100% !important;
     height: 60vh;
-    margin-top: auto;
+    position: absolute;
+    bottom: 0;
+    -webkit-transition: height 1s;
+    transition: height 1s;
+  }
+  .Content.align-top {
+    height: 100%;
+  }
+  .Content div[class^="fade-"] {
+    width: 100% !important;
   }
 }
 
 @media (max-width: 1180px) {
   .Content {
-    width: clamp(320px, 50%, 500px);
+    width: clamp(500px, 40%, 800px);
+  }
+  .Content div[class^="fade-"] {
+    width: clamp(500px, 40%, 800px);
   }
 }
 /*# sourceMappingURL=Content.css.map */
