--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=ProductsPage.css.map */
+.ProductsPage img {
+  width: 100%;
+}
+/*# sourceMappingURL=ProductsPage.css.map */
