--- a/src/components/Highlight/Highlight.scss
+++ b/src/components/Highlight/Highlight.scss
@@ -6,7 +6,7 @@
     color: #000;
     // border-bottom: #000 solid 1px;
     box-shadow: 0 1px 2px #000;
-    position: fixed;
+    //position: fixed;
     top: 0;
     left: 0;
     width: 100%;
