--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,13 @@
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Lato&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Quicksand&family=Tangerine:wght@700&display=swap');
 
 .title-text{
-    font-family: 'Cinzel', serif;
+  font-family: 'Alegreya Sans SC', sans-serif;
     margin: 0;
 }
 
 .body-text{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 1.2rem;
 }
 
