--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -13,27 +13,17 @@
   position: relative;
 }
 
-.Content div[class^="fade-"] {
-  height: 20px;
-  right: 4px;
-  z-index: 1;
-  width: clamp(500px, 40%, 800px);
-  -webkit-clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
-          clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
-}
-
 .Content .fade-out {
   position: absolute;
   background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(transparent));
   background: linear-gradient(#FFF, transparent);
+  width: 100%;
   top: 0;
-}
-
-.Content .fade-in {
-  position: fixed;
-  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(#FFF));
-  background: linear-gradient(transparent, #FFF);
-  bottom: 0;
+  height: 20px;
+  right: 4px;
+  z-index: 1;
+  -webkit-clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
+          clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
 }
 
 .Content .content-container {
@@ -50,9 +40,9 @@
       -ms-flex-direction: column;
           flex-direction: column;
   overflow: auto;
-  padding-top: clamp(15px, 10%, 30px);
-  padding-left: clamp(15px, 10%, 30px);
-  padding-right: clamp(15px, 10%, 30px);
+  padding-top: clamp(40px, 10%, 60px);
+  padding-left: clamp(40px, 10%, 60px);
+  padding-right: clamp(40px, 10%, 60px);
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
@@ -73,16 +63,10 @@
   .Content.align-top {
     height: 100%;
   }
-  .Content div[class^="fade-"] {
-    width: 100% !important;
-  }
 }
 
 @media (max-width: 1180px) {
   .Content {
-    width: clamp(500px, 40%, 800px);
-  }
-  .Content div[class^="fade-"] {
     width: clamp(500px, 40%, 800px);
   }
 }
