--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,8 +1,109 @@
 .Gallery {
   position: relative;
+  cursor: auto;
 }
 
-.Gallery img {
-  max-width: 300px;
+.Gallery .images {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+.Gallery .images .image-container {
+  overflow: hidden;
+}
+
+.Gallery .images .image-container .gallery-image {
+  min-width: 100%;
+  left: 0;
+  top: 0;
+  cursor: pointer;
+}
+
+.Gallery .images .image-container .gallery-image:hover {
+  -webkit-filter: invert(0.05);
+          filter: invert(0.05);
+}
+
+.Gallery .gallery-modal-container {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2;
+}
+
+.Gallery .gallery-modal-container .zoomed-image {
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: hidden;
+  position: relative;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .image-container {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1536px;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .description {
+  background-color: #FFF;
+  padding: clamp(20px, 10%, 40px);
+  margin-right: auto;
+  width: 100%;
+}
+
+.Gallery .gallery-modal-container .zoomed-image button {
+  position: absolute;
+  font-size: 30px;
+  border: 0;
+  background: none;
+  padding: 0;
+  -webkit-transition: -webkit-filter 0.3s;
+  transition: -webkit-filter 0.3s;
+  transition: filter 0.3s;
+  transition: filter 0.3s, -webkit-filter 0.3s;
+}
+
+.Gallery .gallery-modal-container .zoomed-image button:hover {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+.Gallery .gallery-modal-container .zoomed-image .close-gallery {
+  right: 10px;
+  top: 10px;
+  height: 30px;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .previous, .Gallery .gallery-modal-container .zoomed-image .next {
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  top: 50%;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .previous {
+  left: 10px;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .next {
+  right: 10px;
 }
 /*# sourceMappingURL=Gallery.css.map */
