--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,6 +1,84 @@
 .Gallery{
     position: relative;
-    img{
-        max-width: 300px;
+    cursor: auto;
+
+    .images{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        .image-container{ 
+            overflow: hidden; 
+            .gallery-image{
+                min-width: 100%;
+                left: 0;
+                top: 0;
+                cursor: pointer;
+                &:hover{
+                    filter: invert(0.05);
+                }
+            }
+        }
+    }
+
+    .gallery-modal-container{
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        left: 0;
+        top: 0;
+        display: flex;
+        background-color: rgba(0,0,0,0.8);
+        z-index: 2;
+
+        .zoomed-image{
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            position: relative;
+
+            .image-container{
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-repeat: no-repeat;
+                display: flex;
+                max-width: 1536px;
+            }
+            .description{
+                background-color: #FFF;
+                padding: clamp(20px, 10%, 40px);
+                margin-right: auto;
+                width: 100%;
+            }
+
+            button{
+                position: absolute;
+                font-size: 30px;
+                border: 0;
+                background: none;
+                padding: 0;
+                transition: filter 0.3s;
+                
+                &:hover{
+                    filter: invert(1);
+                }
+            }
+            .close-gallery{
+                right: 10px;
+                top: 10px;
+                height: 30px;
+            }
+                  
+            .previous, .next{
+                transform: translateY(-50%);
+                top: 50%;
+            }
+            .previous{
+                left: 10px;
+            }
+            .next{
+                right: 10px;
+            }
+        }
     }
 }
