--- a/src/components/Highlight/Highlight.css
+++ b/src/components/Highlight/Highlight.css
@@ -1,17 +1,17 @@
 .Highlight {
   padding: 5px;
-  background: #fff;
-  color: #000;
-  -webkit-box-shadow: 0 1px 2px #000;
-          box-shadow: 0 1px 2px #000;
+  background: rgba(0, 0, 0, 0.6);
+  color: #FFF;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3 !important;
+  z-index: 3;
+  position: relative;
 }
 
 .Highlight p {
   margin: 0;
+  padding: 3px 5px;
   text-align: center;
 }
 /*# sourceMappingURL=Highlight.css.map */
