--- a/src/components/Highlight/Highlight.scss
+++ b/src/components/Highlight/Highlight.scss
@@ -2,18 +2,17 @@
 
 .Highlight{
     padding: 5px;
-    background: #fff;
-    color: #000;
-    // border-bottom: #000 solid 1px;
-    box-shadow: 0 1px 2px #000;
-    //position: fixed;
+    background: rgba(0,0,0,0.6);
+    color: #FFF;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 3 !important;
+    z-index: 3;
+    position: relative;
 
     p{
         margin: 0;
+        padding: 3px 5px;
         text-align: center;
     }
 }
