--- a/src/pages/LoadingScreen/LoadingScreen.css
+++ b/src/pages/LoadingScreen/LoadingScreen.css
@@ -11,6 +11,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .LoadingScreen.fading {
@@ -18,11 +22,23 @@
   pointer-events: none;
 }
 
+.LoadingScreen .logo {
+  margin: auto auto 50px auto;
+  -webkit-filter: invert(1) blur(10px);
+          filter: invert(1) blur(10px);
+  width: 50%;
+  max-width: 400px;
+  -webkit-transition: -webkit-filter 1s;
+  transition: -webkit-filter 1s;
+  transition: filter 1s;
+  transition: filter 1s, -webkit-filter 1s;
+}
+
 .LoadingScreen .loading-bar {
   height: 3px;
   background-color: white;
   width: 0;
-  margin: auto;
+  margin: 0 auto auto auto;
   -webkit-transition: width 0.8s;
   transition: width 0.8s;
 }
