--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -53,8 +53,6 @@
 }
 
 .Gallery .gallery-modal-container .zoomed-image .image-container {
-  width: 100%;
-  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   display: -webkit-box;
@@ -65,38 +63,48 @@
 
 .Gallery .gallery-modal-container .zoomed-image .description {
   background-color: #FFF;
-  padding: clamp(20px, 10%, 40px);
-  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  position: relative;
+}
+
+.Gallery .gallery-modal-container .zoomed-image .description p {
   width: 100%;
+  text-align: center;
+  margin: auto;
 }
 
 .Gallery .gallery-modal-container .zoomed-image button {
-  position: absolute;
-  font-size: 30px;
   border: 0;
   background: none;
   padding: 0;
-  -webkit-transition: -webkit-filter 0.3s;
-  transition: -webkit-filter 0.3s;
-  transition: filter 0.3s;
-  transition: filter 0.3s, -webkit-filter 0.3s;
 }
 
-.Gallery .gallery-modal-container .zoomed-image button:hover {
-  -webkit-filter: invert(1);
-          filter: invert(1);
+.Gallery .gallery-modal-container .zoomed-image button.clicked {
+  -webkit-animation: button_click 0.5s;
+          animation: button_click 0.5s;
 }
 
 .Gallery .gallery-modal-container .zoomed-image .close-gallery {
+  font-size: 30px;
+  position: absolute;
   right: 10px;
   top: 10px;
   height: 30px;
 }
 
+.Gallery .gallery-modal-container .zoomed-image .close-gallery:hover {
+  -webkit-filter: invert(0.5);
+          filter: invert(0.5);
+}
+
 .Gallery .gallery-modal-container .zoomed-image .previous, .Gallery .gallery-modal-container .zoomed-image .next {
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  top: 50%;
+  color: #FFF;
+  font-size: 40px;
+  position: fixed;
+  bottom: 10px;
 }
 
 .Gallery .gallery-modal-container .zoomed-image .previous {
@@ -105,5 +113,35 @@
 
 .Gallery .gallery-modal-container .zoomed-image .next {
   right: 10px;
+}
+
+@-webkit-keyframes button_click {
+  0% {
+    -webkit-filter: invert(0);
+            filter: invert(0);
+  }
+  25% {
+    -webkit-filter: invert(0.75);
+            filter: invert(0.75);
+  }
+  100% {
+    -webkit-filter: invert(0);
+            filter: invert(0);
+  }
+}
+
+@keyframes button_click {
+  0% {
+    -webkit-filter: invert(0);
+            filter: invert(0);
+  }
+  25% {
+    -webkit-filter: invert(0.75);
+            filter: invert(0.75);
+  }
+  100% {
+    -webkit-filter: invert(0);
+            filter: invert(0);
+  }
 }
 /*# sourceMappingURL=Gallery.css.map */
