--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -48,4 +48,8 @@
 .LandingPage .shop-container .ekukka {
   width: 100%;
 }
+
+.LandingPage img {
+  width: 100%;
+}
 /*# sourceMappingURL=LandingPage.css.map */
