--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -148,6 +148,9 @@
     border-left: 1px solid #000;
     border-bottom: 1px solid #000;
   }
+  .Header #primary-menu .button-container {
+    margin: auto;
+  }
   .Header #primary-menu.show {
     right: 0;
   }
