--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -100,6 +100,9 @@
             padding: 5px 12px;
             border-left: 1px solid #000;
             border-bottom: 1px solid #000;
+            .button-container{
+                margin: auto;
+            }
             &.show{
                 right: 0;
             }
