--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -20,6 +20,7 @@
 
 .Gallery .images .image-container {
   overflow: hidden;
+  margin: 3px;
 }
 
 .Gallery .images .image-container .gallery-image {
@@ -72,7 +73,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 10px;
+  padding: 15px;
   position: relative;
 }
 
