--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -14,6 +14,8 @@
         grid-template-columns: 50% 50%;
         .image-container{ 
             overflow: hidden; 
+            margin: 3px;
+
             .gallery-image{
                 min-width: 100%;
                 left: 0;
@@ -50,7 +52,7 @@
             .description{
                 background-color: #FFF;
                 display: flex;
-                padding: 10px;
+                padding: 15px;
                 position: relative;
                 p{
                     width: 100%;
