--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -26,8 +26,22 @@
             width: 100%;
         }
     }
-    
+
     img{
         width: 100%;
+        &.loading{
+            width: 50px !important;
+            min-width: 0px !important;
+            margin: auto;
+            animation: image_loading infinite 1s;
+        }
+    }
+}
+@keyframes image_loading{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
     }
 }
