forgot commit, cant remember what i did lol

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,10 +19,12 @@
 .left{
   text-align: left;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 .right{
   text-align: right;
   margin-left: auto;
+  margin-bottom: 40px;
 }
 
 // fontawesome
