--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -1,4 +1,1 @@
-.ProductsPage p {
-  margin-bottom: 40px;
-}
-/*# sourceMappingURL=ProductsPage.css.map */
+/* No CSS *//*# sourceMappingURL=ProductsPage.css.map */
