--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,13 @@
 .left {
   text-align: left;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 
 .right {
   text-align: right;
   margin-left: auto;
+  margin-bottom: 40px;
 }
 
 /* width */
