--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,3 +1,20 @@
-.HomePage{
-    
+.HomePage{   
+    .banner{
+        width: 100%;
+        &.loading{
+            width: 50px !important;
+            min-width: 0px !important;
+            margin: auto;
+            animation: image_loading infinite 1s;
+        }
+    }
+}
+
+@keyframes image_loading{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
