--- a/src/pages/ContactsPage/ContactsPage.css
+++ b/src/pages/ContactsPage/ContactsPage.css
@@ -5,5 +5,10 @@
 .ContactsPage ul {
   list-style: none;
   padding: 0;
+  margin-bottom: 0;
+}
+
+.ContactsPage ul.separate li:not(:last-child) {
+  margin-bottom: 10px;
 }
 /*# sourceMappingURL=ContactsPage.css.map */
