--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Quicksand&family=Tangerine:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@700&family=Quicksand:wght@500&family=Tangerine:wght@700&display=swap");
 @import url("https://use.fontawesome.com/releases/v5.8.1/css/all.css");
 .title-text {
   font-family: 'Alegreya Sans SC', sans-serif;
@@ -127,7 +127,7 @@ button:focus {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 @media (max-width: 850px) {
