--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 // fonts
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Quicksand&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@700&family=Quicksand:wght@500&family=Tangerine:wght@700&display=swap');
 
 .title-text{
   font-family: 'Alegreya Sans SC', sans-serif;
@@ -108,7 +108,7 @@ button{
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0,0,0,0.6);
       }
     }
   }
