--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -45,6 +45,10 @@
   transition: opacity 0.5s;
 }
 
+.Content .content-container > div[class$="Page"] > *:first-child {
+  margin-top: 0;
+}
+
 .Content .content-container.fade {
   opacity: 0;
 }
