--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -64,6 +64,7 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding: 0 10px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -88,6 +89,12 @@
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.Header #primary-menu .button-container button.active {
+  font-weight: 900;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .Header #primary-menu .button-container .slider {
