--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -48,6 +48,7 @@
         display: flex;
         align-content: center;
         justify-content: flex-end;
+        padding: 0 10px;
         flex: 1;
 
         .button-container{
@@ -60,6 +61,10 @@
                 margin: 0 10px;
                 font-size: 1.3rem;
                 transition: transform 0.3s;
+                &.active{
+                    font-weight: 900;
+                    transform: scale(1.1);
+                }
             }
 
             .slider{
