--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,6 +1,8 @@
 .Content {
   margin-left: auto;
-  width: clamp(500px, 40%, 800px);
+  min-width: 500px;
+  width: 40%;
+  max-width: 800px;
   height: 100vh;
   background-color: #fff;
   display: -webkit-box;
@@ -17,13 +19,11 @@
   position: absolute;
   background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(transparent));
   background: linear-gradient(#FFF, transparent);
-  width: 100%;
+  width: calc(100% - 4px);
   top: 0;
   height: 20px;
   right: 4px;
   z-index: 1;
-  -webkit-clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
-          clip-path: polygon(8px 0, 100% 0, 100% 100%, 8px 100%);
 }
 
 .Content .content-container {
@@ -38,8 +38,11 @@
       -ms-flex-direction: column;
           flex-direction: column;
   overflow: auto;
+  padding-top: 40px;
   padding-top: clamp(40px, 10%, 60px);
+  padding-left: 40px;
   padding-left: clamp(40px, 10%, 60px);
+  padding-right: 40px;
   padding-right: clamp(40px, 10%, 60px);
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
@@ -56,6 +59,8 @@
 @media (max-width: 850px) {
   .Content {
     width: 100% !important;
+    min-width: 100%;
+    max-width: 100%;
     height: 60vh;
     position: absolute;
     bottom: 0;
@@ -64,12 +69,6 @@
   }
   .Content.align-top {
     height: 100%;
-  }
-}
-
-@media (max-width: 1180px) {
-  .Content {
-    width: clamp(500px, 40%, 800px);
   }
 }
 /*# sourceMappingURL=Content.css.map */
