--- a/src/components/Employees/Employees.scss
+++ b/src/components/Employees/Employees.scss
@@ -12,7 +12,7 @@
             font-size: 1.2rem;
         }
         img{
-            max-width: 100%;
+            width: 100%;
             margin-bottom: 10px;
         }
         *{
