--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -17,8 +17,8 @@
 
 .Content .fade-out {
   position: absolute;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(transparent));
-  background: linear-gradient(#FFF, transparent);
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(#FFF, rgba(255, 255, 255, 0));
   width: calc(100% - 4px);
   top: 0;
   height: 20px;
@@ -38,12 +38,6 @@
       -ms-flex-direction: column;
           flex-direction: column;
   overflow: auto;
-  padding-top: 40px;
-  padding-top: clamp(40px, 10%, 60px);
-  padding-left: 40px;
-  padding-left: clamp(40px, 10%, 60px);
-  padding-right: 40px;
-  padding-right: clamp(40px, 10%, 60px);
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
