--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -13,7 +13,7 @@ $contentWidth: clamp(500px, 40%, 800px);
 
     .fade-out{
         position: absolute;
-        background: linear-gradient(#FFF, transparent);
+        background: linear-gradient(#FFF, rgba(255,255,255,0));
         width: calc(100% - 4px);
         top: 0;
         height: 20px;
@@ -26,12 +26,9 @@ $contentWidth: clamp(500px, 40%, 800px);
         display: flex;
         flex-direction: column;
         overflow: auto;
-        padding-top: 40px;
-        padding-top: clamp(40px,10%,60px);
-        padding-left: 40px;
-        padding-left: clamp(40px,10%,60px);
-        padding-right: 40px;
-        padding-right: clamp(40px,10%,60px);
+        // padding-top: clamp(40px,10%,60px);
+        // padding-left: clamp(40px,10%,60px);
+        // padding-right: clamp(40px,10%,60px);
         transition: opacity 0.5s;
 
         &>div[class$="Page"]{
