--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,8 @@
         opacity: 0;
         transition: opacity 0.5s;
         pointer-events: none;
+        padding: 0;
+        margin-left: 10px;
         width: 40px;
         height: 40px;
         background: none;
@@ -27,6 +29,7 @@
         color: #FFF;
         background-color: #000;
         border: 0;
+        padding: 0;
         border-radius: 3px;
         font-size: 20px;
         margin-left: auto;
