--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,14 +1,8 @@
 .LandingPage {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
 }
 
 .LandingPage .description-container {
@@ -24,6 +18,10 @@
 .LandingPage .description-container p {
   width: 90%;
   margin-top: 0;
+}
+
+.LandingPage > * > * {
+  height: 100%;
 }
 
 .LandingPage .shop-links {
@@ -68,6 +66,7 @@
 
 .LandingPage .hidden-texts button {
   top: -30px;
+  height: auto;
   left: 0;
   font-size: 1.1rem;
   background: none;
