--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -1,7 +1,6 @@
 .LandingPage{
-    display: flex;
+    //display: flex;
     flex-direction: column;
-    flex: 1;
 
     .description-container{
         display: flex;
@@ -11,7 +10,9 @@
             margin-top: 0;
         }
     }
-
+    &>*>*{
+        height: 100%;
+    }
     .shop-links{
         margin-top: -30px;
         margin-bottom: 40px;
@@ -41,6 +42,7 @@
 
         button{
             top: -30px;
+            height: auto;
             left: 0;
             font-size: 1.1rem;
             background: none;
